Fix layout shift

--- a/styles/slick-theme.css
+++ b/styles/slick-theme.css
@@ -136,3 +136,7 @@
   opacity: 0.75;
   color: #000;
 }
+
+.slick-slide {
+  width: auto;
+}
